--- a/result.html
+++ b/result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/stylesheetResults.css" />
+    <link rel="stylesheet" href="styles/stylesheetResults.css" />
     <title>TOC - The Ocean Cleaner</title>
 </head>
 <body>
