--- a/game.html
+++ b/game.html
@@ -85,12 +85,12 @@
             
         
     </div>
-    <script src="./js/arrow.js"></script>
-    <script src="./js/rubbish.js"></script>
-    <script src="./js/oceanDweller.js"></script>
-    <script src="./js/background.js"></script>
-    <script src="./js/diver.js"></script>
-    <script src="./js/game.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="arrow.js"></script>
+    <script src="rubbish.js"></script>
+    <script src="oceanDweller.js"></script>
+    <script src="background.js"></script>
+    <script src="diver.js"></script>
+    <script src="game.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
