--- a/result.html
+++ b/result.html
@@ -40,6 +40,6 @@
         <a class="clickStartAgain" href="./index.html">Click to restart the game</a>
         </div>
     </section>
-    <script src="./js/result.js"></script>
+    <script src="result.js"></script>
 </body>
 </html>
